--- a/index.html
+++ b/index.html
@@ -827,7 +827,9 @@
 				<div class="footer-content">
 					<div class="footer-contacts">
 						<div class="footer-contacts-flag"><img src="images/footer-flag.png" alt=""></div>
-						<div class="footer-contacts-text">Estonia, Tallinn, Kesklinna linnaosa, <br>Narva mnt 7-634, 10117</div>
+						<div class="footer-contacts-text">
+							Estonia Harju maakond, Tallinn, Kesklinna linnaosa, Narva mnt 7-634, 1011
+						</div>
 					</div>
 					<div class="footer-social">
 						<!--<a href="#" class="footer-social-button"></a>-->
