--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
 					<div class="footer-contacts">
 						<div class="footer-contacts-flag"><img src="images/footer-flag.png" alt=""></div>
 						<div class="footer-contacts-text">
-							Estonia Harju maakond, Tallinn, Kesklinna linnaosa, Narva mnt 7-634, 1011
+							Estonia Harju maakond, <br>Tallinn, Kesklinna linnaosa, <br>Narva mnt 7-634, 1011
 						</div>
 					</div>
 					<div class="footer-social">
