--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 						<a href="#" class="nav-link nav-lang-link"><span class="nav-lang-flag eng"></span>English</a>
 						<ul class="nav-list nav-lang-dropdown">
 							<li class="nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag eng"></span>English</a></li>
-							<li class="nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag jp"></span>China</a></li>
-							<li class="nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag kr"></span>Japan</a></li>
-							<li class="nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag ch"></span>Korea</a></li>
+							<li class="nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag ch"></span>China</a></li>
+							<li class="nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag jp"></span>Japan</a></li>
+							<li class="nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag kr"></span>Korea</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -801,9 +801,9 @@
 							<a href="#" class="footer-nav-link nav-lang-link"><span class="nav-lang-flag eng"></span>English</a>
 							<ul class="footer-nav-list nav-lang-dropdown">
 								<li class="footer-nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag eng"></span>English</a></li>
-								<li class="footer-nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag jp"></span>China</a></li>
-								<li class="footer-nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag kr"></span>Japan</a></li>
-								<li class="footer-nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag ch"></span>Korea</a></li>
+								<li class="footer-nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag ch"></span>China</a></li>
+								<li class="footer-nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag jp"></span>Japan</a></li>
+								<li class="footer-nav-list-item"><a href="" title="" class="nav-link"><span class="nav-lang-flag kr"></span>Korea</a></li>
 							</ul>
 						</nav>
 						<nav class="footer-nav">
