--- a/index.html
+++ b/index.html
@@ -817,9 +817,9 @@
 						</nav>
 						<nav class="footer-nav">
 							<ul class="footer-nav-list">
-								<li class="footer-nav-list-item"><a href="" title="" class="footer-nav-link">Terms & Conditions</a></li>
-								<li class="footer-nav-list-item"><a href="/policy.html" title="" class="footer-nav-link">Privacy policy</a></li>
-								<li class="footer-nav-list-item"><a href="" title="" class="footer-nav-link">Legal Opinion</a></li>
+								<li class="footer-nav-list-item"><a target="_blank" href="" title="" class="footer-nav-link">Terms & Conditions</a></li>
+								<li class="footer-nav-list-item"><a target="_blank" href="/policy.html" title="" class="footer-nav-link">Privacy policy</a></li>
+								<li class="footer-nav-list-item"><a target="_blank" href="https://d3ri2ictv4c1x9.cloudfront.net/Legal_Opinion_PPO_Signed.pdf" title="" class="footer-nav-link">Legal Opinion</a></li>
 							</ul>
 						</nav>
 					</div>
