--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 						<a href="https://www.facebook.com/pprotocolio" class="social-button"><img src="images/social-icon-3.png" alt=""></a>
 					</div>
 					<div class="socials-list-item">
-						<a href="https://github.com/ProductProtocol" class="social-button"><img src="images/social-icon-4.png" alt=""></a>
+						<a href="https://github.com/devppo/bc" class="social-button"><img src="images/social-icon-4.png" alt=""></a>
 					</div>
 					<div class="socials-list-item">
 						<a href="https://bitcointalk.org/index.php?topic=5146854.0" class="social-button"><img src="images/social-icon-5.png" alt=""></a>
@@ -807,7 +807,7 @@
 							</ul>
 						</nav>
 						<nav class="footer-nav">
-							<ul class="footer-nav-list">
+							<ul class="footer-nav-list">w
 								<li class="footer-nav-list-item"><a href="#ledger" title="" class="footer-nav-link">Ledger</a></li>
 								<li class="footer-nav-list-item"><a href="#about" title="" class="footer-nav-link">About us</a></li>
 								<li class="footer-nav-list-item"><a href="" title="" class="footer-nav-link">Advantages</a></li>
