--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 		<div class="section-wrapper roadmap-wrapper" id="roadmap">
 			<section class="box roadmap">
 				<h2 class="second-title ta-c">Roadmap</h2>
-				<h3 class="sub-title ta-c">Video and articles about pprotocol</h3>
+				<!--<h3 class="sub-title ta-c">Video and articles about pprotocol</h3>-->
 				<div class="roadmap-list">
 					<div class="roadmap-list-item">
 						<div class="roadmap-title">2017-Q2/2018</div>
@@ -807,7 +807,7 @@
 							</ul>
 						</nav>
 						<nav class="footer-nav">
-							<ul class="footer-nav-list">w
+							<ul class="footer-nav-list">
 								<li class="footer-nav-list-item"><a href="#ledger" title="" class="footer-nav-link">Ledger</a></li>
 								<li class="footer-nav-list-item"><a href="#about" title="" class="footer-nav-link">About us</a></li>
 								<li class="footer-nav-list-item"><a href="" title="" class="footer-nav-link">Advantages</a></li>
@@ -817,7 +817,7 @@
 						</nav>
 						<nav class="footer-nav">
 							<ul class="footer-nav-list">
-								<li class="footer-nav-list-item"><a target="_blank" href="" title="" class="footer-nav-link">Terms & Conditions</a></li>
+								<!--<li class="footer-nav-list-item"><a target="_blank" href="" title="" class="footer-nav-link">Terms & Conditions</a></li>-->
 								<li class="footer-nav-list-item"><a target="_blank" href="/policy.html" title="" class="footer-nav-link">Privacy policy</a></li>
 								<li class="footer-nav-list-item"><a target="_blank" href="https://d3ri2ictv4c1x9.cloudfront.net/Legal_Opinion_PPO_Signed.pdf" title="" class="footer-nav-link">Legal Opinion</a></li>
 							</ul>
@@ -832,8 +832,6 @@
 						</div>
 					</div>
 					<div class="footer-social">
-						<!--<a href="#" class="footer-social-button"></a>-->
-						<img src="images/socials.png" alt="">
 					</div>
 				</div>
 			</footer>
