--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 							<a href="https://www.linkedin.com/in/deepanshubhatt/" class="team-link"><span class="icon icon-linked"></span></a>
 						</div>
 						<div class="team-content">
-							<div class="team-title">Deepanshu Bhatt</div>
+							<div class="team-title">Deepanshu Batt</div>
 						</div>
 					</div>
 					<div class="team-list-item">
@@ -363,12 +363,12 @@
 				<h2 class="second-title ta-c">Our blog</h2>
 				<h3 class="sub-title ta-c">Video and articles about pprotocol</h3>
 				<div class="blog-video-wrapper">
-					<a data-fancybox href="https://youtu.be/gjZLQCthU5U" onClick="ga ('send', 'event', 'submit', 'Media-Button');" class="blog-video" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
+					<a data-fancybox href="https://youtu.be/gjZLQCthU5U" onClick="ga ('send', 'event', 'submit', 'Media-Button');" class="blog-video" style="background-image: url(https://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
 						<span class="blog-video-button"></span>
 					</a>
 					<div class="blog-list">
 						<div class="blog-list-item">
-							<a data-fancybox href="https://youtu.be/IjEgbEW_VxI" onClick="ga ('send', 'event', 'submit', 'Media-Button');" class="blog-video" style="background-image: url(http://img.youtube.com/vi/IjEgbEW_VxI/maxresdefault.jpg)">
+							<a data-fancybox href="https://youtu.be/IjEgbEW_VxI" onClick="ga ('send', 'event', 'submit', 'Media-Button');" class="blog-video" style="background-image: url(https://img.youtube.com/vi/IjEgbEW_VxI/maxresdefault.jpg)">
 								<span class="blog-video-button"></span>
 							</a>
 							<div class="blog-video-text">
@@ -377,7 +377,7 @@
 							</div>
 						</div>
 						<div class="blog-list-item">
-							<a data-fancybox href="https://youtu.be/gjZLQCthU5U" onClick="ga ('send', 'event', 'submit', 'Media-Button');" class="blog-video" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
+							<a data-fancybox href="https://youtu.be/gjZLQCthU5U" onClick="ga ('send', 'event', 'submit', 'Media-Button');" class="blog-video" style="background-image: url(https://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
 								<span class="blog-video-button"></span>
 							</a>
 							<div class="blog-video-text">
@@ -386,7 +386,7 @@
 							</div>
 						</div>
 						<div class="blog-list-item">
-							<a class="blog-video" style="background-image: url(http://img.youtube.com/vi/IjEgbEW_VxI/maxresdefault.jpg)">
+							<a class="blog-video" style="background-image: url(https://img.youtube.com/vi/IjEgbEW_VxI/maxresdefault.jpg)">
 								<span class="blog-video-button"></span>
 							</a>
 							<div class="blog-video-text">
