--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 							<div class="team-type">Community Growth builder</div>
 						</div>
 					</div>
-					<div class="team-list-item">
+					<!--<div class="team-list-item">
 						<div class="team-image">
 							<img src="images/man-image-2.png" alt="">
 							<a href="https://www.linkedin.com/in/pichugin-ruslan-170a9641/" class="team-link"><span class="icon icon-linked"></span></a>
@@ -264,7 +264,7 @@
 							<div class="team-title">Ruslan Pichugin</div>
 							<div class="team-type">CSO Chief Strategy Officer</div>
 						</div>
-					</div>
+					</div>-->
 					<div class="team-list-item">
 						<div class="team-image">
 							<img src="images/man-image-8.png" alt="">
