--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 					<div class="roadmap-list-item pink-circle">
 						<div class="roadmap-title">Q3/2019</div>
 						<div class="roadmap-text">
-							Listing on exchanges Integration with 10+ companies
+							Integration with 10+ companies
 						</div>
 					</div>
 					<div class="roadmap-list-item pink-circle pink-circle-opacity">
