--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<li><a href="#main">Home</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#ledger">Ledger</a></li>
-					<li><a href="#team">Team</a></li>
+					<!-- <li><a href="#team">Team</a></li> -->
 					<li><a href="#ambassadors">Ambassadors</a></li>
 					<li><a href="#blog">Blog</a></li>
 					<li><a href="#protocol">Protocol</a></li>
@@ -184,7 +184,7 @@
 						</div>
 					</section>
 				</div>
-				<div class="section-wrapper team-wrapper" id="team">
+				<div class="section-wrapper team-wrapper" id="team" style="display: none;">
 					<section class="box team">
 						<h2 class="second-title ta-c">Our team</h2>
 						<h3 class="sub-title ta-c">Best of the professionals</h3>
